--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#E22B25</color>
 
     <!--Custom Colors-->
     <color name="custom_color_primary">#2E4C6D</color>
@@ -14,5 +15,7 @@
     <color name="custom_color_borderButton_700">#396EB0</color>
     <color name="custom_color_background">#FFFFFF</color>
     <color name="custom_color_text_primary">#060906</color>
-    <color name="custom_color_text_secondary">#464747</color>
+    <color name="custom_color_text_secondary">#464646</color>
+    <color name="custom_color_button_secondary">#E4E4E4</color>
+    <color name="ghost">#00000000</color>
 </resources>
